# Video_Extraction_Into_Graph

./: README.md  pyproject.toml
facegraph/: cli.py  edges.py  extractor.py  features.py  indices.py  io_utils.py  overlay.py
facegraph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: extract.py
